修改登录接口

--- a/public/platform-config.json
+++ b/public/platform-config.json
@@ -1,6 +1,6 @@
 {
   "Version": "6.0.0",
-  "Title": "PureAdmin",
+  "Title": "superman",
   "FixedHeader": true,
   "HiddenSideBar": false,
   "MultiTagsCache": false,
