Refactor user and menu entities to platform-specific entities
Refactored the `User` and `SysMenu` entities to `PlatformUser` and `PlatformMenu` respectively, updating all related services, mappers, repositories, and controllers to use the new entity names. This change ensures that the codebase is more modular and specific to the platform context.

--- a/public/platform-config.json
+++ b/public/platform-config.json
@@ -6,7 +6,7 @@
   "MultiTagsCache": false,
   "KeepAlive": true,
   "Locale": "zh",
-  "Layout": "double",
+  "Layout": "horizontal",
   "Theme": "light",
   "DarkMode": false,
   "OverallStyle": "light",
@@ -16,7 +16,7 @@
   "HideFooter": true,
   "Stretch": false,
   "SidebarStatus": true,
-  "EpThemeColor": "#409EFF",
+  "EpThemeColor": "#F94247",
   "ShowLogo": true,
   "ShowModel": "smart",
   "MenuArrowIconNoTransition": false,
