Add role and user management functionalities
This commit introduces new classes and methods for managing roles and users, including `PlatformRole`, `PlatformUserRole`, and their corresponding mappers and repositories. It also updates the `PlatformUserService` and `PlatformMenuService` to integrate with the new role and user entities, and adjusts the API endpoints in the frontend to reflect these changes.

--- a/public/platform-config.json
+++ b/public/platform-config.json
@@ -6,7 +6,7 @@
   "MultiTagsCache": false,
   "KeepAlive": true,
   "Locale": "zh",
-  "Layout": "horizontal",
+  "Layout": "vertical",
   "Theme": "light",
   "DarkMode": false,
   "OverallStyle": "light",
@@ -16,7 +16,7 @@
   "HideFooter": true,
   "Stretch": false,
   "SidebarStatus": true,
-  "EpThemeColor": "#F94247",
+  "EpThemeColor": "#E12E2E",
   "ShowLogo": true,
   "ShowModel": "smart",
   "MenuArrowIconNoTransition": false,
