Add RoleStatusUpdateDTO and update role status functionality
Added a new DTO `RoleStatusUpdateDTO` for updating role status, and implemented the corresponding API and service methods. Updated the frontend to call the new API for updating role status and added a confirmation message for role deactivation. Adjusted some UI margins and updated the role list retrieval method.

--- a/public/platform-config.json
+++ b/public/platform-config.json
@@ -13,7 +13,7 @@
   "Grey": false,
   "Weak": false,
   "HideTabs": false,
-  "HideFooter": true,
+  "HideFooter": false,
   "Stretch": false,
   "SidebarStatus": true,
   "EpThemeColor": "#E12E2E",
